# SpotiNotifs

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  OAuth2.py  README.md  add_user.py  compose.yaml  index.html  logging_config.py  main.py  output.json  pyproject.toml  requirements.txt  spotify.py  sql.py
deploy/: install-systemd.sh
deploy/systemd/: spotinotifs-notifier.service  spotinotifs-notifier.timer  spotinotifs.service
