[project]
name = "spotinotifs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.14",
    "aiosignal==1.4.0",
    "attrs==25.3.0",
    "authlib==1.6.0",
    "blinker==1.9.0",
    "certifi==2025.7.9",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "cryptography==45.0.5",
    "discord==2.3.2",
    "discord-py==2.5.2",
    "dotenv==0.9.9",
    "flask==3.1.1",
    "frozenlist==1.7.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "multidict==6.6.3",
    "propcache==0.3.2",
    "pycparser==2.22",
    "python-dotenv==1.1.1",
    "requests==2.32.4",
    "typing-extensions==4.14.1",
    "urllib3==2.5.0",
    "werkzeug==3.1.3",
    "yarl==1.20.1",
]
